# eudsl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  README.md  requirements-dev.txt  requirements.txt
build_tools/: build_llvm.sh  build_llvm_wasi.sh  pyproject.toml
build_tools/cmake/: build_llvm.sh  llvm_cache.cmake  llvm_wasm_cache.cmake  llvm_wasm_project_include.cmake
projects/: CMakeLists.txt
projects/common/eudsl/: bind_vec_like.h  type_casters.h  util.h
projects/eudsl/: CMakeLists.txt
projects/eudsl-llvmpy/: CMakeLists.txt  eudsl-llvmpy-generate.py  pyproject.toml
projects/eudsl-llvmpy/src/: eudslllvm_ext.cpp  types.h
projects/eudsl-llvmpy/src/llvm/: .gitignore  __init__.py  context.py  function.py  instructions.py  types_.py  util.py
projects/eudsl-llvmpy/tests/: test_bindings.py
projects/eudsl-nbgen/: CMakeLists.txt  pyproject.toml
projects/eudsl-nbgen/cmake/: eudsl-nbgen-config.cmake  eudsl_nbgen-config.cmake  make_generated_shards.py
projects/eudsl-nbgen/includes/eudsl/: bind_vec_like.h  helpers.h
projects/eudsl-nbgen/src/: __init__.py  __main__.py  eudsl-nbgen.cpp
projects/eudsl-py/: CMakeLists.txt  pyproject.toml  requirements.txt
projects/eudsl-py/cmake/: EUDSLPYConfig.cmake  make_generated_registration.py
projects/eudsl-py/src/: CMakeLists.txt  EUDSLGenDLTIDialect.inc.cpp  EUDSLGenLLVM.inc.cpp  EUDSLGenNVVM.inc.cpp  EUDSLGenROCDL.inc.cpp  EUDSLGenacc.inc.cpp  EUDSLGenaffine.inc.cpp  EUDSLGenamdgpu.inc.cpp  EUDSLGenamx.inc.cpp  EUDSLGenarith.inc.cpp  EUDSLGenarm_neon.inc.cpp  EUDSLGenarm_sme.inc.cpp  EUDSLGenarm_sve.inc.cpp  EUDSLGenasync.inc.cpp  EUDSLGenbufferization.inc.cpp  EUDSLGencf.inc.cpp  EUDSLGencomplex.inc.cpp  EUDSLGenemitc.inc.cpp  EUDSLGenfunc.inc.cpp  EUDSLGengpu.inc.cpp  EUDSLGenindex.inc.cpp  EUDSLGenirdl.inc.cpp  EUDSLGenlinalg.inc.cpp  EUDSLGenmath.inc.cpp  EUDSLGenmemref.inc.cpp  EUDSLGenmesh.inc.cpp  EUDSLGenml_program.inc.cpp  EUDSLGenmpi.inc.cpp  EUDSLGennvgpu.inc.cpp  EUDSLGenomp.inc.cpp  EUDSLGenpdl.inc.cpp  EUDSLGenpdl_interp.inc.cpp  EUDSLGenpolynomial.inc.cpp  EUDSLGenptr.inc.cpp  EUDSLGenquant.inc.cpp  EUDSLGenscf.inc.cpp  EUDSLGenshape.inc.cpp  EUDSLGensparse_tensor.inc.cpp  EUDSLGenspirv.inc.cpp  EUDSLGentensor.inc.cpp  (+24 more)
projects/eudsl-py/src/cmake/: AddEUDSL.cmake
projects/eudsl-py/src/eudsl/: .gitignore  __init__.py  eudsl_ext.py
projects/eudsl-py/src/eudsl/dialects/: __init__.py
projects/eudsl-py/src/eudsl/ir/: __init__.py
projects/eudsl-py/tests/: test_bindings.py  test_eudsl_py_bindings.py
projects/eudsl-python-extras/: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
projects/eudsl-python-extras/_custom_build/: backend.py
projects/eudsl-python-extras/examples/: chip.py  cuda_e2e.ipynb  cuda_matmul_opt.py  flash_attention.py  matmul_dxil.py  mlir_python_extras.ipynb  mwe.py  rdna_matmul_opt.py  tile_lang.py  tiled_arm_matmul.py  util.py  vectorization_e2e.ipynb
projects/eudsl-python-extras/mlir/extras/: __init__.py  context.py  util.py
projects/eudsl-python-extras/tests/: conftest.py  other_host_reqs.txt  test_ast.py  test_context.py  test_generics.py  test_other_hosts.py  test_pipeline.py  test_regions.py  test_runtime.py  test_testing.py  test_testing_infra.py  test_transformers.py  test_types.py  test_util.py
projects/eudsl-python-extras/tests/dialect/: test_arith.py  test_func.py  test_generics.py  test_gpu.py  test_linalg.py  test_llvm.py  test_memref.py  test_nvvm_nvgpu.py  test_scf.py  test_tensor.py  test_transform.py  test_types.py  test_vector.py  util.py
projects/eudsl-python-extras/utils/: check_llvm_license.py  generate_pass_pipeline.py  lift_mlir_to_python.py
projects/eudsl-tblgen/: CMakeLists.txt  pyproject.toml  requirements.txt
projects/eudsl-tblgen/src/: CMakeLists.txt  TGLexer.cpp  TGLexer.h  TGParser.cpp  TGParser.h  eudsl_tblgen_ext.cpp
projects/eudsl-tblgen/src/eudsl_tblgen/: __init__.py  __main__.py  mlir.py
projects/eudsl-tblgen/tests/: test_bindings.py  test_c_api_emission.py  test_eudsl_tblgen_bindings.py
projects/eudsl-tblgen/tests/td/: AttrTypeBase.td  BuiltinDialect.td  BuiltinLocationAttributes.td  BuiltinTypeInterfaces.td  CommonAttrConstraints.td  CommonTypeConstraints.td  DialectBase.td  InferTypeOpInterface.td  OpBase.td  TestDialect.td  TritonDialect.td  TritonGPUAttrDefs.td  TritonGPUDialect.td  TritonGPUTypes.td  TritonInterfaces.td  TritonTypes.td
projects/eudsl-tile/: CMakeLists.txt  pyproject.toml
projects/eudsl-tile/tests/: test_smoke.py
projects/eudsl/eudsl-tblgen/: CMakeLists.txt  pyproject.toml  requirements.txt
projects/eudsl/eudsl-tblgen/src/: CMakeLists.txt  eudsl_tblgen_ext.cpp
projects/eudsl/eudsl-tblgen/tests/: Constraints.td  test_bindings.py
projects/eudsl/eudsl-tblgen/tests/td/: Interfaces.td  (+3 more)
projects/js/embindings/: CMakeLists.txt  example.cpp
projects/mlir-native-tools/: setup.py
projects/mlir-python-bindings/: .gitignore  CMakeLists.txt  DXILHelper.cpp  DXILLowering.cpp  pyproject.toml  smoketest.py  version.py
projects/mlir-python-bindings-wasm/: 32bCRunnerUtils.h  32bRunnerUtils.cpp  CMakeLists.txt  Dockerfile  WasmCompilerLinkerLoaderCAPI.cpp  WasmCompilerLinkerLoaderCAPI.h  WasmExecutionEngine.cpp  build.sh  pyproject.toml  test_wasm_execution_engine.py  version.py  wasm_execution_engine.py
projects/mlir-python-bindings-wasm/mlir/: wasm_execution_engine.py
projects/mlir-python-bindings/mlir/: dxil.py
projects/mlir-python-bindings/tests/: test_matmul_dxil.py
projects/mlir-python-mcp/: README.md  pyproject.toml
projects/mlir-python-mcp/mlir_python_mcp/: __init__.py  _passes_base.py  helpers.py  passes.py  server.py  session.py
projects/mlir-python-mcp/tests/: MANUAL_TEST_PLAN.md  conftest.py  test_helpers.py  test_server.py  test_session.py
projects/mlir-wgpu/: CMakeLists.txt  shader_test.cpp
projects/mlir-wheel/: MANIFEST.in  README.md  setup.py
projects/mlir-wheel/mlir_wheel/: __init__.py  __main__.py
scripts/llvm_wasm/: Dockerfile  build_llvm_wasm.sh  llvm_wasm_cache.cmake  pyproject.toml
(+87 files in other folders)
