# Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
# Copyright (c) 2025.

[project]
name = "llvm"
version = "21.0.0"
requires-python = ">=3.8,<=3.13"
[project.urls]
Homepage = "https://github.com/llvm/llvm-project"

[build-system]
requires = [
    "scikit-build-core==0.10.7",
    "typing_extensions==4.12.2",
    "nanobind>=2.4, <3.0",
    "numpy>=1.19.5, <=2.1.2",
    "pybind11>=2.10.0, <=2.13.6",
    "PyYAML>=5.4.0, <=6.0.1",
    'ml_dtypes>=0.1.0, <=0.6.0; python_version<"3.13"',
    'ml_dtypes>=0.5.0, <=0.6.0; python_version>="3.13"'
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "0.10"
build-dir = "build"
cmake.source-dir = "../third_party/llvm-project/llvm"
cmake.args = ["-C", "cmake/llvm_cache.cmake"]
build.targets = ["install-mlirdevelopment-distribution"]

[tool.scikit-build.cmake.define]
CMAKE_C_COMPILER_LAUNCHER = { env = "CMAKE_C_COMPILER_LAUNCHER", default = "" }
CMAKE_CXX_COMPILER_LAUNCHER = { env = "CMAKE_CXX_COMPILER_LAUNCHER", default = "" }
LLVM_TARGETS_TO_BUILD = { env = "LLVM_TARGETS_TO_BUILD", default = "host" }
CMAKE_CXX_VISIBILITY_PRESET = "hidden"
CMAKE_VERBOSE_MAKEFILE = "ON"